# anc-python

./: README.md  anc_presentation.pptx  anc_settings.json  create_presentation.py  main.py  pyproject.toml  ~$anc_presentation.pptx
anc_demo/: __init__.py  dsp.py  engine.py  main.py  preferences.py
