[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "defusedxml>=0.7.1",
    "numpy>=2.4.6",
    "python-pptx>=1.0.2",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "textual>=8.2.7",
]

[project.scripts]
anc-demo = "anc_demo.main:main"

[tool.uv]
package = true

